force-app/main/default/objects/aecm__Project_Resource__c/aecm__Project_Resource__c.object-meta.xml
<CustomObject>
    <description>Container for a Tempest project resource. Used for unassigned resources in early planning, and can be used for basic assignment. Helps drive capacity and demand reports.</description>
    <label>Project Resource</label>
    <nameField>
        <label>Project Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>