force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Resource</label>
    <referenceTo>aecm__Resource__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>