force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Assigned_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assigned_Resource_Name__c</fullName>
    <formula>aecm__Assigned_Resource__r.aecm__Resource_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Resource Name</label>
    <type>Text</type>
</CustomField>