force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Assigned_Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assigned_Resource_Role__c</fullName>
    <formula>TEXT( aecm__Assigned_Resource__r.aecm__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Resource Role</label>
    <type>Text</type>
</CustomField>