force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Assigned_Resource_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assigned_Resource_Start_Date__c</fullName>
    <label>Assigned Resource Start Date</label>
    <type>Date</type>
</CustomField>