force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>aecm__Cost_Rate__c</fullName>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>