force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Durration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>aecm__Durration_in_Days__c</fullName>
    <formula>aecm__Target_End_Date__c -  aecm__Target_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>