force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>aecm__Hours_Estimate__c</fullName>
    <formula>(aecm__Durration_in_Days__c * 8)*  aecm__Utilization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Estimate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>