force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Level__c.field-meta.xml
<CustomField>
    <fullName>aecm__Level__c</fullName>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aecm__Resource_Level</valueSetName>
    </valueSet>
</CustomField>