force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Program_Project__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Project__c</fullName>
    <label>Program Project</label>
    <referenceTo>aecm__Program_Project__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>