force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Resource_Name__c</fullName>
    <formula>IF( ISBLANK( aecm__Assigned_Resource__c ) ,    Name   ,   aecm__Assigned_Resource__r.aecm__Resource_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>