force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Target_Start_Date__c</fullName>
    <label>Target Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>