force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Total_Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total_Skills_Required__c</fullName>
    <label>Total Skills Required</label>
    <summaryForeignKey>aecm__Project_Resource_Skill__c.aecm__Project_Resource__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>