force-app/main/default/objects/aecm__Project_Resource__c/fields/aecm__Utilization__c.field-meta.xml
<CustomField>
    <fullName>aecm__Utilization__c</fullName>
    <defaultValue>0.8</defaultValue>
    <inlineHelpText>Provide a percentage of utilization for this resource.</inlineHelpText>
    <label>Utilization</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>