force-app/main/default/objects/aecm__Project_Resource__c/validationRules/aecm__Cannot_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>aecm__Cannot_exceed_100</fullName>
    <active>true</active>
    <errorConditionFormula>aecm__Utilization__c &gt; 1</errorConditionFormula>
    <errorDisplayField>aecm__Utilization__c</errorDisplayField>
    <errorMessage>Utilization percent cannot exceed 100%</errorMessage>
</ValidationRule>